aggiunto scroll "seguici su fb"

--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -9,9 +9,26 @@
 <body>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 	<center><font color="PURPLE"><big>
-	<h1>Nao Fermi</h1></big>
+	<div class="page-header">
+		<h1>Nao Fermi</h1>
+	</div>
 	</font>
-	</center>
+	<p></p>
+    <font color="BLUE">
+    <big>
+    <marquee
+    onmouseover="this.stop()"
+    onmouseout="this.start()"
+    loop="-1"
+    scrollamount="5"
+    scrolldelay="20"
+	direction="left"
+	height="30"
+	width="1500"
+	align="Right">
+	Per ulteriori aggiornamenti seguici su <a href="https://www.facebook.com/NaoFermi">facebook</a>!!<br>
+	</marquee>
+	<p></p>
 	
 	
 </body>
