--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -1,34 +1,34 @@
 <!doctype html>
 <html lang="it">
 <head><Title>Nao Fermi</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
 </head>
 <body>
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<center><font color="PURPLE"><big>
-	<div class="page-header">
-		<h1>Nao Fermi</h1>
-	</div>
-	</font>
-	<p></p>
-    <font color="BLUE">
-    <big>
-    <marquee
-    onmouseover="this.stop()"
-    onmouseout="this.start()"
-    loop="-1"
-    scrollamount="5"
-    scrolldelay="20"
-	direction="left"
-	height="30"
-	width="1500"
-	align="Right">
-	Per ulteriori aggiornamenti seguici su <a href="https://www.facebook.com/NaoFermi">facebook</a>!!<br>
-	</marquee>
-	<p></p>
+<script src="netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<center><font color="PURPLE"><big>
+<div class="jumbotron">
+<h1>Nao Fermi</h1>
+</div>
+</font>
+<p></p>
+<font color="BLUE">
+<big>
+<marquee
+onmouseover="this.stop()"
+onmouseout="this.start()"
+loop="-1"
+scrollamount="5"
+scrolldelay="20"
+direction="left"
+height="30"
+width="1500"
+align="Right">
+Per ulteriori aggiornamenti seguici sulla pagina <a href="https://www.facebook.com/NaoFermi"><b>FACEBOOK </b></a>!!<br>
+</marquee>
+<p></p>
 	
 	
 </body>
