cambiato colore del titolo

--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script src="netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<center><font color="PURPLE"><big>
+<center><font color="RED"><big>
 <div class="jumbotron">
 <h1>Nao Fermi</h1>
 </div>
