aggiunto file bootstrap e funziona corettamente

--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -3,13 +3,13 @@
 <head><Title>Nao Fermi</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap-theme.min.css">
 </head>
 <body>
-<script src="netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="bootstrap.min.js"></script>
 <center><font color="RED"><big>
-<div class="jumbotron">
+<div class="page-header">
 <h1>Nao Fermi</h1>
 </div>
 </font>
