--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -6,29 +6,31 @@
 <link rel="stylesheet" href="bootstrap.min.css">
 <link rel="stylesheet" href="bootstrap-theme.min.css">
 </head>
-<body>
+<body style="background:#FAFAD2">
 <script src="bootstrap.min.js"></script>
-<center><font color="RED"><big>
-<div class="page-header">
-<h1>Nao Fermi</h1>
-</div>
-</font>
-<p></p>
-<font color="BLUE">
-<big>
-<marquee
-onmouseover="this.stop()"
-onmouseout="this.start()"
-loop="-1"
-scrollamount="5"
-scrolldelay="20"
-direction="left"
-height="30"
-width="1500"
-align="Right">
-Per ulteriori aggiornamenti seguici sulla pagina <a href="https://www.facebook.com/NaoFermi"><b>FACEBOOK </b></a>!!<br>
-</marquee>
-<p></p>
+<nav class="navbar navbar-default" role="navigation">
+
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <span class="sr-only">Espandi barra di navigazione</span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="https://www.facebook.com/NaoFermi/?fref=ts"><big>Nao Fermi</big></a>
+  </div>
+
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active">
+	  <a href="#">Chi siamo?</a></li>
+      <li><a href="#">Stato Challenge</a></li>
+      <li><a href="#">Link 3</a></li>
+    </ul>
+  </div>
+
+</nav>
+
 	
 	
 </body>
