--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -8,12 +8,11 @@
 </head>
 <body style="background:#FAFAD2">
 <script src="bootstrap.min.js"></script>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-inverse" role="navigation">
 
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Espandi barra di navigazione</span>
-      <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
@@ -25,17 +24,8 @@
       <li class="active">
 	  <a href="#">Chi siamo?</a></li>
       <li><a href="#">Stato Challenge</a></li>
-      <li><a href="#">Link 3</a></li>
     </ul>
   </div>
-
 </nav>
-
-	
-	
 </body>
-
-
-
-
 </html>
