aggiunta pagina chi siamo??!?

--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -16,16 +16,19 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="Pagina principale.html"><big>Nao Fermi</big></a>
+    <a class="navbar-brand" href="Pagina Principale.html"><big>Nao Fermi</big></a>
   </div>
-
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
       <li class="active">
-	  <a href="chi_siamo.html">Chi siamo?</a></li>
+	  <a href="#">Chi siamo?</a></li>
       <li><a href="#">Stato Challenge</a></li>
     </ul>
   </div>
 </nav>
+<p></p>
+<center><font color="PURPLE">
+<h1>Chi Siamo?</h1>
+</font></center>
 </body>
 </html>
