--- a/Pagina principale.html
+++ b/Pagina principale.html
@@ -9,7 +9,6 @@
 <body style="background:#FAFAD2">
 <script src="bootstrap.min.js"></script>
 <nav class="navbar navbar-default navbar-inverse" role="navigation">
-
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
       <span class="sr-only">Espandi barra di navigazione</span>
@@ -18,7 +17,6 @@
     </button>
     <a class="navbar-brand" href="Pagina principale.html"><big>Nao Fermi</big></a>
   </div>
-
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav navbar-right">
       <li class="active">
@@ -27,5 +25,11 @@
     </ul>
   </div>
 </nav>
+<marquee align="middle" direction="left"scrolldelay="10">
+<font color="BLUE"><big>
+Un Nao per domarli, un Nao per trovarli, un Nao per ghermirli e nel buio buggarli.
+</big>
+</font>
+</marquee>
 </body>
 </html>
