--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -29,6 +29,40 @@
 <p></p>
 <center><font color="PURPLE">
 <h1>Chi Siamo?</h1>
+</font>
+<big>
+<p>Un gruppo di elettronici e informatici dell'ITIS "E.Fermi".</p>
+<p><b>Obiettivo: </b>partecipare alla Nao Challenge 2017</p>
+</big>
+<P></p>
+<font color="RED">
+<h3>Componenti<h3>
 </font></center>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4"><center><font color="GREEN"><h4>Balugani Lorenzo</h4></font></center><img width="500" src="noImagine.jpg" class="img-responsive"></div>
+    <div class="col-md-4"><center><font color="GREEN"><h4>Casari Giovanni</h4></font></center><img width="500" src="noImagine.jpg" class="img-responsive"></div>
+    <div class="col-md-4"><center><font color="GREEN"><h4>La Borghi Martina</h4></font></center><img width="500" src="noImagine.jpg" class="img-responsive"></div>
+	</div>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+	<p></p>
+  <div class="row">
+	<div class="col-md-4"><center><font color="GREEN"><h4>Magnaye Alexander</h4></font><img width="500" src="noImagine.jpg" class="img-responsive"></center></div>
+	<div class="col-md-4"><center><font color="GREEN"><h4>Torrini Edoardo</h4></font></center><img width="500" src="noImagine.jpg" class="img-responsive"></div>
+	<div class="col-md-4"><center><font color="GREEN"><h4>Totaro Benito Mario</h4></font></center><img width="500" src="noImagine.jpg" class="img-responsive"></div>
+</div>
+<p></p>
+<p></p>
+<p></p>
 </body>
 </html>
